atualização formulario e envio

--- a/abta_tecnologia/index.html
+++ b/abta_tecnologia/index.html
@@ -10,6 +10,15 @@
 
 <section id="geral">
 	<h1><img src="images/top.jpg" alt=""></h1>
+
+
+	<div>
+		<p>Escolha o arquivo e faça download:</p>
+		<ul>
+			<li></li>
+		</ul>
+	</div>
+
 </section>
  	
  	
